# DSCI-551-Project---Talk-to-data

./: .gitignore  README.md  charts.py  db.py  llm.py  main.py  pyproject.toml  requirements.txt  schema.py
charts/: 2025_season_end_constructors_standings.html  compare_lebron_james_and_kobe_bryant_points_per_se.html  compare_lebron_james_and_kobe_bryant_s_points_per.html  george_russel_s_season_end_points_for_each_year.html  number_of_three_pointers_scored_by_each_player_in.html  points_scored_by_each_player.html  points_scored_by_each_player_in_2000.html  points_scored_by_each_player_in_2000_order_by_poin.html  q1_top_scorers_2000.html  q2_3p_by_year_1985_2017.html  q4_avg_fg__by_pos_2010.html  show_the_total_three_pointers_made_each_year_from.html  the_points_in_the_table_are_cumulative__only_use_t.html  top_10_heaviest_nba_players.html  what_are_the_driver_standings_at_the_season_end_of.html  what_are_the_number_of_safety_cars_happend_for_eac.html  what_was_the_total_points_scored_by_the_chicago_bu.html  who_are_the_top_10_players_by_total_career_points.html  who_are_the_top_10_players_by_total_points_scored.html  who_scored_the_most_points_in_2000.html  who_scored_the_most_points_in_2000_season.html  who_scored_the_most_points_in_the_2000_season.html
registry/: schema_cache.json
