[project]
name = "project-integrated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10.0",
    "groq>=0.9.0",
    "huggingface-hub>=0.28.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.4.0",
]
